--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.4.0",
     "prettier": "^2.1.2"
   },
