--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.4.0",
+    "koa-session": "^6.1.0",
     "prettier": "^2.1.2"
   },
   "devDependencies": {
